Implement update property
